<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ADD8E6"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        tools:context="com.example.toshiba.myapplication.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/Questions1"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/Group_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Group1_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DVD"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group1_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Microprocessor"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group1_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hard Disk"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group1_radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mouse"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Questions2"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/Group_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Group2_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hypertext Transfer Plotter"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group2_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Head Tail Transfer Protocol"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group2_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hypertext Transfer Protocol"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group2_radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hypertext Transfer Plot"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Questions3"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/Group_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Group3_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fragmentation"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group3_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Compression"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group3_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Encapsulation"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group3_radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unzipped"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Questions4"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/Group_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Group4_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diskette"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group4_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dashboard"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group4_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clipboard"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group4_radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hard drive"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Questions5"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/Group_button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Group5_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buying and selling computer products"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group5_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buying and selling international goods"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group5_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buying and selling products and services not found in stores"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group5_radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buying and selling products and services over the Internet"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Questions6"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/Group_button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Group6_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cable"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group6_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Keyboard"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group6_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Os"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Group6_radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pen drive"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Questions7"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textvalue11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Year"
            android:inputType="phone"
            android:onClick="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Questions8"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClick"
            android:text="Network of networks"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClick"
            android:text="Global system of interconnected computer networks"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClick"
            android:text="A network "
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClick"
            android:text="A small lan network"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:id="@+id/Submit"
            android:text="Submit" />

    </LinearLayout>
</ScrollView>